# backtrader-rs

./: .gitignore  .prettierrc  Cargo.toml  README.md  package.json
.github/actions/: build-test.yml
examples/data/: candles_1h.json
src/: main.rs
