[package]
name = "backtrader-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barter = "0.8.13"
barter-data = "0.7.0"
barter-integration = "0.5.3"
chrono = "0.4.26"
parking_lot = "0.12.1"
serde_json = "1.0.96"
time = "0.3.21"
tokio = "1.28.2"
uuid = "1.3.3"
